Fixing shell escape issues